--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2025-02-24 16:10+0100\n"
+"POT-Creation-Date: 2025-04-10 13:27+0200\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -163,8 +163,8 @@ msgstr "Protokoll (PDF)"
 msgid "Audio (MP3)"
 msgstr "Audio (MP3)"
 
-msgid "Audio (ZIP)"
-msgstr "Audio (ZIP)"
+msgid "Memorial for the visually impaired and blind (DAISY audio book)"
+msgstr "Memorial für Sehbehinderte und Blinde (DAISY-Hörbuch)"
 
 msgid "Date already used."
 msgstr "Datum wird bereits verwendet."
@@ -313,6 +313,9 @@ msgstr "Noch keine Landsgemeinden erfasst."
 
 msgid "Assembly items & downloads"
 msgstr "Traktanden & Downloads"
+
+msgid "Audio (ZIP)"
+msgstr "Audio (ZIP)"
 
 msgid "Audio"
 msgstr "Audio"
