--- a/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
+++ b/src/onegov/org/locale/fr_CH/LC_MESSAGES/onegov.org.po
@@ -115,6 +115,13 @@ msgid "Stripe Connect"
 msgstr "Stripe Connect"
 
 #, python-format
+msgid "Daily Newsletter ${time}"
+msgstr "Newsletter quotidienne ${time}"
+
+msgid "New news since the last newsletter:"
+msgstr "Nouvelles depuis la dernière newsletter :"
+
+#, python-format
 msgid "${org} OneGov Cloud Status"
 msgstr "Statut du OneGov Cloud de ${org}"
 
@@ -2059,6 +2066,31 @@ msgstr ""
 "Envoyer une notification par e-mail aux utilisateurs suivants lorsqu'un "
 "destinataire se désabonne de la newsletter"
 
+msgid "Enable automatic daily newsletters"
+msgstr "Activer les newsletters quotidiennes automatiques"
+
+msgid ""
+"Automatically creates a daily newsletter containing all new news items since "
+"the last sending time. It will only send a newsletter if there is at least "
+"one new news item. Only subscribers who subscribed to the daily newsletter "
+"will receive it, independent of their selected categories if there are any."
+msgstr ""
+"Crée automatiquement une lettre d'information quotidienne contenant tous les "
+"nouveaux articles d'actualités depuis la dernière heure d'envoi. Il n'enverra "
+"une lettre d'information que s'il y a au moins un nouvel article "
+"d'actualités. Seuls les abonnés qui se sont inscrits à la lettre "
+"d'information quotidienne la recevront, indépendamment de leurs catégories "
+"sélectionnées, le cas échéant."
+
+msgid "Automatic newsletters"
+msgstr "Newsletters automatiques"
+
+msgid "Newsletter sending times (24h format)"
+msgstr "Horaires d'envoi de la newsletter (format 24h)"
+
+msgid "Specify times for sending newsletters. e.g., 8, 12, 18."
+msgstr "Spécifiez les heures d'envoi de la newsletter. Par exemple, 8, 12, 18."
+
 msgid "Invalid YAML format. Please refer to the example."
 msgstr "Format YAML non valide. Veuillez vous référer à l'exemple."
 
@@ -2074,6 +2106,16 @@ msgid ""
 msgstr ""
 "Format non valide. Seuls les sujets et les sous-sujets sont autorisés - "
 "aucune structure plus profonde n'est prise en charge."
+
+msgid "Please specify at least one time."
+msgstr "Veuillez spécifier au moins une heure."
+
+msgid "Invalid time format. Please use a value between 0 and 24."
+msgstr ""
+"Format d'heure non valide. Veuillez utiliser une valeur entre 0 et 24."
+
+msgid "Invalid time format. Please use 24h format."
+msgstr "Format d'heure non valide. Veuillez utiliser le format 24h."
 
 msgid "Old domain"
 msgstr "Ancien domaine"
@@ -2274,6 +2316,19 @@ msgstr "Adresse e-mail"
 
 msgid "The subscriber has given consent to receive the newsletter."
 msgstr "L'abonné a donné son consentement pour recevoir la newsletter."
+
+msgid "Daily newsletter for all categories (only for news items)"
+msgstr ""
+"Bulletin d'information quotidien pour toutes les catégories (uniquement pour "
+"les nouvelles)"
+
+#, python-format
+msgid ""
+"If there are any new news items since the last sending time you will receive "
+"the newsletter at the following times: ${joined}:00."
+msgstr ""
+"S'il y a de nouveaux articles d'actualité depuis le dernier envoi, vous "
+"recevrez la newsletter aux heures suivantes : ${joined}:00."
 
 msgid "Submission Window"
 msgstr "Fenêtre de soumission"
